https for text builder. Will eventually move this in to a repo when I can figure out what the issue is with text selection

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= stylesheet_link_tag    "application", media: "all"%>
     <%= javascript_include_tag "application" %>
     <script charset="utf-8" src='/pdf.js'></script>
-    <script charset="utf-8" src="http://vivin.net/pub/pdfjs/textlayerbuilder.js"></script>
+    <script charset="utf-8" src="https://vivin.net/pub/pdfjs/textlayerbuilder.js"></script>
     <%= html_import_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
