--- a/app/assets/components/application.html
+++ b/app/assets/components/application.html
@@ -6,8 +6,21 @@
  * can be referenced here using a relative path.
  *
  *= require polymer/polymer
- *= require core-elements/core-elements
- *= require paper-elements/paper-elements
+ *= require core-ajax/core-ajax
+ *= require core-scaffold/core-scaffold
+ *= require core-toolbar/core-toolbar
+ *= require core-item/core-item
+ *= require core-icon/core-icon
+ *= require core-list/core-list
+ *= require core-menu/core-menu
+ *= require paper-toast/paper-toast
+ *= require paper-icon-button/paper-icon-button
+ *= require paper-shadow/paper-shadow
+ *= require paper-spinner/paper-spinner
+ *= require paper-button/paper-button
+ *= require paper-input/paper-input
+ *= require paper-button/paper-button
+ *= require paper-progress/paper-progress
  *= require app-router/app-router
  *= require ajax-form/ajax-form
  *= require ./paper-url-resolver
