--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -8,3 +8,30 @@ $oja_message: #ffd737
 // $navbarBackground: $light_blue
 // $text-color: white
 // @import "home"
+
+#flash
+  position: fixed
+  width:    100%
+  z-index:  100
+
+  .inner
+    width:      600px
+    margin:     auto
+    background: white
+
+  .alert
+    padding:     8px
+    color:       black
+    font-weight: bold
+    background:  #ffd6da
+
+    &.alert-error, &.flash-alert
+      background-color: #ffd6da
+    &.alert-notice
+      background-color: #ffffc8
+    &.alert-success
+      background-color: #e2fbdb
+
+    a.close
+      float:           right
+      text-decoration: none
