Fix flash messges so they don't inhibit clickinglinks on the toolbar (#58)

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -10,14 +10,12 @@ $oja_message: #ffd737
 // @import "home"
 
 #flash
-  position: fixed
-  width:    100%
-  z-index:  100
-
-  .inner
-    width:      600px
-    margin:     auto
-    background: white
+  position:    fixed
+  width:       600px
+  top:         10px
+  left:        50%
+  margin-left: -300px
+  z-index:     100
 
   .alert
     padding:     8px
