--- a/app/assets/components/oj-paper-preview.html
+++ b/app/assets/components/oj-paper-preview.html
@@ -72,7 +72,11 @@
   <script>
     Polymer({
       preview_url:function(paper){
-        return "http://docs.google.com/gview?url="+paper.links[1].url+"&embedded=true"
+        link = paper.links.filter(function(link){return link.content_type=="application/pdf"})[0].url
+        if(link.indexOf(".pdf")==-1){
+          link+=".pdf"
+        }
+        return "http://docs.google.com/gview?url="+link+"&embedded=true"
       },
       arxiv_lookup_url:function(paper_id){
         return "/papers/"+paper_id+"/arXiv_details"
