--- a/app/assets/components/oj-submit-page.html
+++ b/app/assets/components/oj-submit-page.html
@@ -4,16 +4,10 @@
     <section vertical layout center style="height:100%;min-height:400px" >
       <h1>Submit Paper</h1>
 
-        <paper-shadow flex center-justified vertical layout center z="1">
-          <paper-input  label="arXiv paper"      value="{{paperIdentifier}}"></paper-input>
+        <paper-shadow id=form flex center-justified vertical layout center z="1">
 
-          <template if="{{ paperValid }}">
-            <paper-button  raised on-tap={{submit}} role='button'>Submit</paper-button>
-          </template>
-
-          <template if="{{ !paperValid }}">
-            <paper-button  disabled role='button'>Submit</paper-button>
-          </template>
+          <paper-input  label="arXiv paper" value="{{paperIdentifier}}"></paper-input>
+          <paper-button  raised disabled?={{!paperValid}} on-tap={{submit}} role=button>Submit</paper-button>
 
           <p>Please enter the id, abstract url or pdf url of a paper from the arXiv.</p>
           <p class='example'>1401.0003</p>
@@ -34,19 +28,19 @@
 
     <style>
 
-      paper-shadow{
+      #form {
         min-width:70%;
         background-color:white;
       }
-      paper-input{
+      paper-input {
         width: 90%;
       }
-      paper-button{
+      paper-button {
         background: #3e50b4;
         color: white;
       }
-      p.example{
-        margin     : 0px 0px 0px 10px;
+      p.example {
+        margin     : 0 0 0 10px;
         color      : grey;
         opacity    : 0.7;
         text-align : left;
