--- a/app/assets/components/oj-paper-icon.html
+++ b/app/assets/components/oj-paper-icon.html
@@ -10,9 +10,9 @@
       icon_for_paper:function(paper){
 
         paper_icon_options = {pending: "paper_submit", accepted: "paper_accepted",view: "paper_view"};
-        icon = paper_icon_options[this.paper.state]
+        icon = paper_icon_options[this.paper.state];
         if(!icon){
-          icon = paper_icon_options.view
+          icon = paper_icon_options.view;
         }
 
         return icon;
