--- a/app/assets/components/oj-new-annotation.html
+++ b/app/assets/components/oj-new-annotation.html
@@ -8,6 +8,7 @@
       <paper-icon-button on-click={{dismiss}} icon="close"></paper-icon-button>
     </div>
   </div>
+
   <style>
     :host{
       z-index:1;
@@ -18,7 +19,7 @@
       position:absolute;
       box-sizing:border-box;
       width:100%;
-      left:0px;
+      left:0;
     }
     textarea{
       resize: none;
