tweaks to bring annotation list in line with the annotation format

--- a/app/assets/components/oj-annotation-list.html
+++ b/app/assets/components/oj-annotation-list.html
@@ -1,12 +1,12 @@
-<polymer-element name='oj-annotation-list' attributes="annotations scale pageHeight pageOffset showNewAnnotation newAnnotationLocation">
+<polymer-element name='oj-annotation-list' attributes="annotations scale pageHeight pageOffset showNewAnnotation newAnnotationLocation paper">
   <template>
     <div layout vertical flex>
       <template repeat="{{annotation in annotations}}">
-        <oj-annotation style="top:{{annotation | locationForAnnotation}}px"  top="{{annotation | locationForAnnotation}}" color="{{annotation | colorForAnnotation}}" annotation={{annotation}} ></oj-annotation>
+        <oj-annotation paper={{paper}} style="top:{{annotation | locationForAnnotation}}px"  top="{{annotation | locationForAnnotation}}" color="{{annotation | colorForAnnotation}}" annotation={{annotation}} ></oj-annotation>
       </template>
 
       <template if={{showNewAnnotation}}>
-        <oj-new-annotation style="top:{{newAnnotationLocation | locationForAnnotation}}px" location={{newAnnotationLocation}}> </oj-new-annotation>
+        <oj-new-annotation style="top:{{newAnnotationLocation | locationForAnnotation}}px" location={{newAnnotationLocation}} paper={{paper}}> </oj-new-annotation>
       </template>
     </div>
 
@@ -24,13 +24,15 @@
     Polymer({
       scale: 2,
       locationForAnnotation: function(annotation){
-        page_no = annotation.location.page
-        y       = annotation.location.y
+        page_no = annotation.page
+        y       = annotation.yStart
+        console.log("Location for annotation is ",(y + (this.pageHeight + this.pageOffset)*page_no))
         return (y + (this.pageHeight + this.pageOffset)*page_no)
       },
       colorForAnnotation: function(annotation){
+        console.log("role is ", annotation.author.role, annotation)
         roles = {reviewer: "#F44336", author: "#0D47A1", contributor: "#C0CA33"}
-        return roles[annotation.user.role]
+        return roles[annotation.author.role]
       }
     })
   </script>
