--- a/app/assets/components/oj-review-page.html
+++ b/app/assets/components/oj-review-page.html
@@ -4,8 +4,10 @@
 
       <p class='title'>{{paper.title}}</p>
       <div flex></div>
-      <span> <core-icon id='closedIcon' icon='check'></core-icon> 3 closed issues </span>
-      <span> <core-icon id='openIcon'   icon='error'></core-icon> 5 open issues </span>
+      <template if={{annotations}}>
+        <span> <core-icon id='closedIcon' icon='check'></core-icon> {{annotations | countClosed }} Closed Issues</span>
+        <span> <core-icon id='openIcon'   icon='error'></core-icon> {{annotations | countOpen }} Open Issues</span>
+      </template>
       <span><core-icon icon='list'></core-icon></span>
 
       <paper-progress  class='bottom fit' value="{{loadProgress}}"></paper-progress>
@@ -57,8 +59,16 @@
     Polymer({
       newAnnotationVisible: false,
       annotations: [],
+
+      countOpen:function(annotations){
+        return annotations.filter(function(annotation){return annotation.state=='new'}).length
+      },
+
+      countClosed:function(annotations){
+        return annotations.filter(function(annotation){return annotation.state=='closed'}).length
+      },
+
       onAddAnnotation:function(e){
-        console.log("event is ", e.detail)
         this.addAnnotation(e.detail)
       },
       addAnnotation:function(annotation){
