Fix Console Error: Attributes on oj-paper-preview were data bound prior to Polymer upgrading the element. This may result in incorrect binding types.  Resolves #102

--- a/app/assets/components/application.html
+++ b/app/assets/components/application.html
@@ -23,8 +23,12 @@
  *= require paper-progress/paper-progress
  *= require app-router/app-router
  *= require ajax-form/ajax-form
- *= require ./paper-url-resolver
- *= require ./oj-user-login
+
+ *= require oj-global-expressions
+
+ *= require elements/all
+ *= require ui-elements/all
+ *= require subpages/all
 
  *= require_tree .
 
