--- a/app/assets/components/subpages/oj-submit-page.html
+++ b/app/assets/components/subpages/oj-submit-page.html
@@ -25,7 +25,7 @@
 
     </section>
 
-    <link rel="stylesheet" href="../stylesheets/customized-components.css.scss" />
+    <link rel="stylesheet" href="../../stylesheets/customized-components.css.scss" />
     <style>
       section {
         height:100%;
