--- a/app/assets/components/ui-elements/oj-paper-icon.html
+++ b/app/assets/components/ui-elements/oj-paper-icon.html
@@ -1,7 +1,7 @@
 <polymer-element name='oj-paper-icon' attributes='paper'>
   <template>
     <core-item  src="/assets/paper_view.png" label={{paper.title}} vertical>
-      <a href="/#/review/{{paper.sha}}" target="_self"></a>
+      <a href="/vendor/assets/javascripts#/review/{{paper.sha}}" target="_self"></a>
     </core-item>
   </template>
 
