--- a/app/assets/components/ui-elements/oj-paper-row.html
+++ b/app/assets/components/ui-elements/oj-paper-row.html
@@ -7,7 +7,7 @@
       <p>State: <span class="{{paper.state}}">{{paper.state}}</span></p>
       <p>Remaining Issues: <span>{{paper.pending_issues_count}}</span></p>
       <p>Your role: <span>{{paper.user_permissions}}</span></p>
-      <a href="/#/review/{{paper.sha}}" target="_self"></a>
+      <a href="/vendor/assets/javascripts#/review/{{paper.sha}}" target="_self"></a>
     </status>
   </div>
 
