--- a/app/assets/components/subpages/oj-paper-preview.html
+++ b/app/assets/components/subpages/oj-paper-preview.html
@@ -57,7 +57,7 @@
 
     <core-media-query query="min-width: 930px" queryMatches="{{hidePDF}}"></core-media-query>
 
-    <link rel="stylesheet" href="../stylesheets/customized-components.css.scss" />
+    <link rel="stylesheet" href="../../stylesheets/customized-components.css.scss" />
     <style>
       #preview{
         width: 50%;
