--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,10 +1,9 @@
 <% if flash.present? %>
-    <div id="flash">
-      <% flash.each do |key, value| %>
-          <div class="alert alert-<%=key%>">
-            <a class="close" href='#' onclick="this.parentElement.style.display='none'; return false;">&times;</a>
-            <%=value%>
-          </div>
-      <% end %>
-    </div>
+  <script>
+    <% message = flash.map { |key, value| value }.join("\r\n") %>
+    Polymer.whenReady(function(){
+        var app = document.getElementById('oj-app');
+        app.showNotification(<%= raw message.to_json %>);
+    });
+  </script>
 <% end %>
