--- a/app/assets/components/ui-elements/oj-paper-row.html
+++ b/app/assets/components/ui-elements/oj-paper-row.html
@@ -17,7 +17,8 @@
     }
     .row{
       width:100%;
-      height: 100%
+      height: 100%;
+      cursor: pointer;
     }
     .pending{
       color: #AB47BC;
