Change name link in toolbar to go to orcid/my-profile page. Fixes #68

--- a/app/assets/components/ui-elements/oj-user-login.html
+++ b/app/assets/components/ui-elements/oj-user-login.html
@@ -1,7 +1,7 @@
 <polymer-element name="oj-user-login" attributes='user userReady'>
   <template>
     <template if="{{user.name != undefined}}">
-      <a class='link' href='/auth/orcid'>{{user.name}} {{ {"(Editor)": user.editor} | tokenList }}</a>
+      <a class='link' href='https://orcid.org/my-orcid' target='_blank' >{{user.name}} {{ {"(Editor)": user.editor} | tokenList }}</a>
       <a class='link' href='/signout'>Sign Out</a>
     </template>
 
