Style rows in paper view depending on status. Resolves #32

--- a/app/assets/components/ui-elements/oj-annotation-list.html
+++ b/app/assets/components/ui-elements/oj-annotation-list.html
@@ -13,7 +13,7 @@
     <style>
       :host{
         position: relative;
-        box-model: border-box;
+        box-sizing: border-box;
         padding-top: 20px;
       }
     </style>
@@ -24,15 +24,15 @@
     Polymer({
       scale: 2,
       locationForAnnotation: function(annotation){
-        page_no = annotation.page
-        y       = annotation.yStart
-        console.log("Location for annotation is ",(y + (this.pageHeight + this.pageOffset)*page_no))
-        return (y + (this.pageHeight + this.pageOffset)*page_no)
+        page_no = annotation.page;
+        y       = annotation.yStart;
+        console.log("Location for annotation is ",(y + (this.pageHeight + this.pageOffset)*page_no));
+        return (y + (this.pageHeight + this.pageOffset)*page_no);
       },
       colorForAnnotation: function(annotation){
-        console.log("role is ", annotation.author.role, annotation)
-        roles = {reviewer: "#F44336", author: "#0D47A1", contributor: "#C0CA33"}
-        return roles[annotation.author.role]
+        console.log("role is ", annotation.author.role, annotation);
+        roles = {reviewer: "#F44336", author: "#0D47A1", contributor: "#C0CA33"};
+        return roles[annotation.author.role];
       }
     })
   </script>
