--- a/app/assets/components/ui-elements/oj-paper-collection.html
+++ b/app/assets/components/ui-elements/oj-paper-collection.html
@@ -27,7 +27,7 @@
       .item {
         border-bottom: 1px grey solid;
         box-sizing: border-box;
-        padding: 20px
+        padding:    0 0 0 20px;
       }
     </style>
 
