--- a/app/assets/components/ui-elements/oj-paper-row.html
+++ b/app/assets/components/ui-elements/oj-paper-row.html
@@ -1,9 +1,8 @@
 <polymer-element name='oj-paper-row' attributes='paper'>
 <template>
-  <div class='row' flex layout horizontal>
+  <div class='row {{paper | classForPaper}}' flex layout horizontal>
     <h3>{{paper.title}}</h3>
-    <span flex></span>
-    <status>
+    <status class='{{paper | classForPaper}}'>
       <p>State: <span class="{{paper.state}}">{{paper.state}}</span></p>
       <p>Remaining Issues: <span>{{paper.pending_issues_count}}</span></p>
       <p>Your role: <span>{{paper.user_permissions}}</span></p>
@@ -12,24 +11,59 @@
   </div>
 
   <style>
+    ::host {
+        margin: 0;
+    }
     h3{
-      max-width:70%;
     }
     .row{
       width:100%;
       height: 100%;
       cursor: pointer;
     }
-    .pending{
-      color: #AB47BC;
+
+    status {
+        float:         right;
+        min-width:     150px;
+        padding-left:  8px;
+        padding-right: 8px;
     }
-    .accepted{
-      color: #4DB6AC;
+    status.needs-attention {
+        background: #ffd6da;
     }
+    status.in-process {
+        background: #ffffc8;
+    }
+    status.accepted {
+        color: #dcffdc;
+    }
+
   </style>
 </template>
 
 <script>
-  Polymer({})
+  Polymer({
+      classForPaper: function(paper){
+          if (!paper) return;
+
+          var has_role = function(role) { return paper.user_permissions.indexOf(role) >= 0; };
+
+          if (has_role('submittor') && paper.pending_issues_count>1)
+            return 'needs-attention';
+
+          else if (has_role('reviewer') && paper.state=='under_review')
+              return 'needs-attention';
+
+          else if (paper.state=='rejected')
+              return 'needs-attention';
+
+          else if (paper.state=='accepted')
+              return 'accepted';
+
+          else if (has_role('submittor'))
+              return 'in-process';
+
+      }
+  })
 </script>
 </polymer-element>
